k8s/traefik/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  namespace: kube-system
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v3.1.2
          args:
            - --api.dashboard=true
            - --accesslog
            - --entrypoints.web.Address=:80
            - --providers.kubernetescrd
            - --providers.kubernetescrd.allowCrossNamespace=true
            - --log.level=DEBUG
          ports:
            - name: web
              containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: traefik
  namespace: kube-system
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: web
      targetPort: 80
